--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -115,7 +115,10 @@ rcon-bind-address=127.0.0.1:7023
 # To disable simply comment the line out.
 # If you change the port please ensure you change the META TAG tdsm:port in /WebInterface/Files/index.html
 # NOTE: Web server is still in development and is disabled internally.
-web-server-bind-address=http://*:8448
+web-server-bind-address=http://localhost:8448
+# Having troubles with accessing it publically, or on all adapters? Try these
+#web-server-bind-address=http://+:8448
+#web-server-bind-address=http://*:8448
 
 # Set to false if you wish to use another application to serve HTML files (such as nginx or apache)
 # [true|false] Default: true
