--- a/TDSM-Patcher/packages.config
+++ b/TDSM-Patcher/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net451" />
   <package id="Vestris" version="1.0.1" targetFramework="net451" />
 </packages>
