--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: csharp
 solution: tdsm.sln
 install:
   - mozroots --import --sync
-  - nuget restore tdsm.sln
+  - mono .nuget/NuGet.exe restore Core/packages.config -PackagesDirectory packages/ -source "https://api.nuget.org/v3/index.json;https://www.nuget.org/api/v2/curated-feeds/microsoftdotnet/"
+  - mono .nuget/NuGet.exe restore TDSM-Patcher/packages.config -PackagesDirectory packages/ -source "https://api.nuget.org/v3/index.json;https://www.nuget.org/api/v2/curated-feeds/microsoftdotnet/"
 script:
   - xbuild /p:Configuration=Debug tdsm.sln
