--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -43,7 +43,7 @@ cheat-detection=true
 
 # If the web API is enabled this will allow services who ping your server to see what plugins are installed.
 # [true|false] Default: true
-#api-showplugins=true
+#api-show-plugins=true
 
 # ============================================
 #                SERVER SIDE CHARACTERS
