--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -79,12 +79,6 @@
     <Reference Include="KopiLua">
       <HintPath>..\Open-Terraria-API\Binaries\Libraries\KopiLua.dll</HintPath>
     </Reference>
-    <Reference Include="OTA">
-      <HintPath>..\Open-Terraria-API\Binaries\OTA.dll</HintPath>
-    </Reference>
-    <Reference Include="TerrariaServer">
-      <HintPath>..\Open-Terraria-API\Binaries\TerrariaServer.exe</HintPath>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -104,6 +98,9 @@
       <HintPath>..\packages\System.Reflection.Metadata.1.1.0\lib\dotnet5.2\System.Reflection.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="TerrariaServer">
+      <HintPath>..\Open-Terraria-API\Binaries\Server\TerrariaServer.exe</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Migrations\20151022123313_Core_InitialCreate.cs" />
@@ -145,12 +142,6 @@
     <Compile Include="Data\Management\APIAccountManager.cs" />
     <Compile Include="Data\PermissionsOAuthProvider.cs" />
     <Compile Include="Data\OTAContextExtensions.cs" />
-    <Compile Include="Command\CommandParser.cs" />
-    <Compile Include="Command\AccessLevel.cs" />
-    <Compile Include="Command\CommandInfo.cs" />
-    <Compile Include="Command\CommandMapExtensions.cs" />
-    <Compile Include="PluginExtensions.cs" />
-    <Compile Include="Command\VanillaCommands.cs" />
     <Compile Include="Data\PasswordFormat.cs" />
     <Compile Include="Data\Storage.cs" />
     <Compile Include="PluginHooks\ServerCommand.cs" />
@@ -245,6 +236,11 @@
     <Compile Include="Config\ConfigPrefixAttribute.cs" />
     <Compile Include="Core\TDSMConfig.cs" />
     <Compile Include="Loggers.cs" />
+    <Compile Include="Core\Command\TDSMCommandInfo.cs" />
+    <Compile Include="Core\Command\AccessLevel.cs" />
+    <Compile Include="Extensions\ISenderExtensions.cs" />
+    <Compile Include="Extensions\BasePlayerExtensions.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -268,5 +264,16 @@
     <Folder Include="Net\Web\ApiControllers\" />
     <Folder Include="Data\Extensions\" />
     <Folder Include="Config\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Open-Terraria-API\OTA.Commands\OTA.Commands.csproj">
+      <Project>{1F4BFCFD-FA1F-4E47-B44E-91E18EC785AC}</Project>
+      <Name>OTA.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Open-Terraria-API\API\API.csproj">
+      <Project>{A1F792B2-5D80-4DE4-B5DB-7A05DBEABD60}</Project>
+      <Name>API</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
