--- a/TDSM-Patcher/TDSM-Patcher.csproj
+++ b/TDSM-Patcher/TDSM-Patcher.csproj
@@ -19,7 +19,7 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
-    <Commandlineparameters>-platform Mac</Commandlineparameters>
+    <Commandlineparameters>-projectfiles -platform Server</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
